--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -27,6 +28,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KonstruApp"
         tools:targetApi="31">
+        <activity
+            android:name=".Eliminar_cuenta"
+            android:exported="false" />
+        <activity
+            android:name=".Chat.ChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CambiarPassword"
+            android:exported="false" />
+        <activity
+            android:name=".RecuperarPassword"
+            android:exported="false" />
+        <activity
+            android:name=".Comentarios"
+            android:exported="false" />
+        <activity
+            android:name=".DetalleVendedor.DetalleVendedor"
+            android:exported="false" />
         <activity
             android:name=".DetalleAnuncio.DetalleAnuncio"
             android:exported="false" />
